--- a/StoryStore/Views/Home/AddNewStory.cshtml
+++ b/StoryStore/Views/Home/AddNewStory.cshtml
@@ -16,7 +16,7 @@
 
         <div class="form-group">
             <label for="exampleInputPassword1">Description</label>
-            <input type="text" class="form-control" id="addNewStory-Description" placeholder="Enter Author Name">
+            <input type="text" class="form-control" id="addNewStory-Description" placeholder="Enter Description">
         </div>
         <div class="form-group">
             <label for="exampleInputPassword1">Header image</label>
@@ -25,11 +25,11 @@
 
         <div class="form-group">
             <label for="exampleInputPassword1">Audio File</label>
-            <input accept="audio/*" type="file" class="form-control" id="addNewStory-audioFile" placeholder="Password">
+            <input accept="audio/*" type="file" class="form-control" id="addNewStory-audioFile" placeholder="">
         </div>
         <div class="form-group">
             <label for="exampleInputPassword1">Pdf File</label>
-            <input accept="application/pdf"  type="file" class="form-control" id="addNewStory-pdfFile" placeholder="Password">
+            <input accept="application/pdf"  type="file" class="form-control" id="addNewStory-pdfFile" placeholder="">
         </div>
 
         <div class="form-group">
