delete un used files

--- a/StoryStore/Views/Home/SignUp.cshtml
+++ b/StoryStore/Views/Home/SignUp.cshtml
@@ -10,11 +10,6 @@
     <!--===============================================================================================-->
     <link rel="icon" type="image/png" href="~/images/icons/favicon.ico" />
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="~/vendor/bootstrap/css/bootstrap.min.css">
-    <!--===============================================================================================-->
-    <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="~/vendor/animate/animate.css">
-    <!--===============================================================================================-->
     <!--===============================================================================================-->
     <link rel="stylesheet" href="~/css/sweetAlertCss.css">
     <link rel="stylesheet" href="~/css/myStyle.css">
@@ -71,7 +66,6 @@
                         <div class="input-group mb-3">
 
                             <select class="input100" id="singup-ageRanges">
-                               
                             </select>
                         </div>
                         <span class="focus-input100"></span>
@@ -104,14 +98,7 @@
 
 
 
-    <!--===============================================================================================-->
-    <script src="~/vendor/jquery/jquery-3.2.1.min.js"></script>
-    <!--===============================================================================================-->
-    <script src="~/vendor/bootstrap/js/popper.js"></script>
-    <script src="~/vendor/bootstrap/js/bootstrap.min.js"></script>
-    <!--===============================================================================================-->
-    <!--===============================================================================================-->
-    <script src="~/vendor/tilt/tilt.jquery.min.js"></script>
+    <script src="~/js/jquery.min.js"></script>
     <script src="~/js/sweetalert2.min.js"></script>
     <script src="~/js/custom.js"></script>
     <script src="/JsData/signup.js"></script>
@@ -120,9 +107,6 @@
             scale: 1.1
         })
     </script>
-    <!--===============================================================================================-->
-
-
 
 </body>
 </html>
