--- a/StoryStore/Views/Home/Login.cshtml
+++ b/StoryStore/Views/Home/Login.cshtml
@@ -10,12 +10,11 @@
     <!--===============================================================================================-->
     <link rel="icon" type="image/png" href="~/images/icons/favicon.ico" />
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="~/vendor/bootstrap/css/bootstrap.min.css">
     <!--===============================================================================================-->
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="~/vendor/animate/animate.css">
+
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="~/vendor/css-hamburgers/hamburgers.min.css">
+
     <!--===============================================================================================-->
     <link rel="stylesheet" href="~/css/sweetAlertCss.css">
     <link rel="stylesheet" href="~/css/myStyle.css">
@@ -79,14 +78,8 @@
 
 
 
-    <!--===============================================================================================-->
-    <script src="~/vendor/jquery/jquery-3.2.1.min.js"></script>
-    <!--===============================================================================================-->
-    <script src="~/vendor/bootstrap/js/popper.js"></script>
-    <script src="~/vendor/bootstrap/js/bootstrap.min.js"></script>
-    <!--===============================================================================================-->
-    <!--===============================================================================================-->
-    <script src="~/vendor/tilt/tilt.jquery.min.js"></script>
+
+    <script src="~/js/jquery.min.js"></script>
     <script src="~/js/sweetalert2.min.js"></script>
     <script src="~/js/custom.js"></script>
     <script src="/JsData/login.js"></script>
@@ -95,7 +88,6 @@
             scale: 1.1
         })
     </script>
-    <!--===============================================================================================-->
 
 
 
