--- a/StoryStore/Views/Home/Login.cshtml
+++ b/StoryStore/Views/Home/Login.cshtml
@@ -4,25 +4,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title> Sag Hidrolik Login</title>
+    <title> Story Store Login</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--===============================================================================================-->
     <link rel="icon" type="image/png" href="~/images/icons/favicon.ico" />
-    <!--===============================================================================================-->
-    <!--===============================================================================================-->
-    <!--===============================================================================================-->
-
-    <!--===============================================================================================-->
-
-    <!--===============================================================================================-->
     <link rel="stylesheet" href="~/css/sweetAlertCss.css">
     <link rel="stylesheet" href="~/css/myStyle.css">
 
-    <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css" href="~/css/login/main.css">
     <link rel="stylesheet" type="text/css" href="~/css/login/util.css">
-    <!--===============================================================================================-->
+
 </head>
 <body>
 
@@ -77,9 +69,10 @@
 
 
 
-
-
     <script src="~/js/jquery.min.js"></script>
+
+    <script src="~/vendor/tilt/tilt.jquery.min.js"></script>
+
     <script src="~/js/sweetalert2.min.js"></script>
     <script src="~/js/custom.js"></script>
     <script src="/JsData/login.js"></script>
