--- a/StoryStore/Views/Home/SignUp.cshtml
+++ b/StoryStore/Views/Home/SignUp.cshtml
@@ -7,17 +7,12 @@
     <title> Sag Hidrolik Login</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--===============================================================================================-->
     <link rel="icon" type="image/png" href="~/images/icons/favicon.ico" />
-    <!--===============================================================================================-->
-    <!--===============================================================================================-->
     <link rel="stylesheet" href="~/css/sweetAlertCss.css">
     <link rel="stylesheet" href="~/css/myStyle.css">
-
-    <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css" href="~/css/login/main.css">
     <link rel="stylesheet" type="text/css" href="~/css/login/util.css">
-    <!--===============================================================================================-->
+ 
 </head>
 <body>
     <div class="limiter">
@@ -97,8 +92,8 @@
 
 
 
-
     <script src="~/js/jquery.min.js"></script>
+    <script src="~/vendor/tilt/tilt.jquery.min.js"></script>
     <script src="~/js/sweetalert2.min.js"></script>
     <script src="~/js/custom.js"></script>
     <script src="/JsData/signup.js"></script>
