--- a/StoryStore/Views/Story/GetStoryDetails.cshtml
+++ b/StoryStore/Views/Story/GetStoryDetails.cshtml
@@ -45,9 +45,9 @@
         @if (Model.AudioUrl != "")
         {
 
-            <audio controls>
+            <audio style="float:right" controls>
                 <source src="horse.ogg" type="audio/ogg">
-                <source src="/StoryAudios/16-ليلى .mp3" type="audio/mpeg">
+                <source src="@Model.AudioUrl" type="audio/mpeg">
                 Your browser does not support the audio element.
             </audio>
         }
