--- a/StoryStore/Views/Home/AddNewStory.cshtml
+++ b/StoryStore/Views/Home/AddNewStory.cshtml
@@ -15,6 +15,11 @@
         </div>
 
         <div class="form-group">
+            <label for="exampleInputPassword1">Date</label>
+            <input type="text" class="form-control" id="addNewStory-date" placeholder="">
+        </div>
+
+        <div class="form-group">
             <label for="exampleInputPassword1">Description</label>
             <input type="text" class="form-control" id="addNewStory-Description" placeholder="Enter Description">
         </div>
@@ -29,7 +34,7 @@
         </div>
         <div class="form-group">
             <label for="exampleInputPassword1">Pdf File</label>
-            <input accept="application/pdf"  type="file" class="form-control" id="addNewStory-pdfFile" placeholder="">
+            <input accept="application/pdf" type="file" class="form-control" id="addNewStory-pdfFile" placeholder="">
         </div>
 
         <div class="form-group">
