--- a/StoryStore/Views/Shared/_Layout.cshtml
+++ b/StoryStore/Views/Shared/_Layout.cshtml
@@ -7,12 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Sag Hidrolik</title>
+    <title>Story Store</title>
     <!-- Bootstrap -->
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
           integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
     <link href="~/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="~/css/jqueryUiCss.css">
+    <link href="~/css/timePicker.css" rel="stylesheet" />
     <!-- Font Awesome -->
     <link href="~/css/site.css" rel="stylesheet">
     <!-- Custom Theme Style -->
@@ -68,7 +70,7 @@
                                         <a href="/Home/DeleteStory"><i class="fas  fa-2x fa-trash"></i> <span style="font-size:15px">Delete Story</span> </a>
                                     </li>
                                 }
-                                </ul>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -109,6 +111,8 @@
     @*<script src="~/js/fastclick.js"></script>
         <script src="~/js/nprogress.js"></script>
         <script src="~/js/jquery.mCustomScrollbar.concat.min.js"></script>*@
+    <script src="~/js/jqueryUi.js"></script>
+    <script src="~/js/timepicker.min.js"></script>
     <script src="~/js/custom.js"></script>
     <script src="~/JsData/signup.js"></script>
     <script src="~/JsData/storiesActions.js"></script>
